<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongDetailsActivity">

    <TextView
        android:id="@+id/newSongInstruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_new_song1"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/text_input_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->
    <EditText
        android:id="@+id/getSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/new_song_name"
        android:textSize="25sp"
        android:ems="11"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSongInstruction1" />


    <EditText
        android:id="@+id/getArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/new_song_artist"
        android:textSize="25sp"
        android:ems="11"
        app:layout_constraintStart_toStartOf="@+id/getSongName"
        app:layout_constraintTop_toBottomOf="@+id/getSongName" />


    <EditText
        android:id="@+id/getUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/new_song_url"
        android:textSize="25sp"
        android:ems="11"
        app:layout_constraintStart_toStartOf="@+id/getArtistName"
        app:layout_constraintTop_toBottomOf="@+id/getArtistName" />

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/buttonToPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/create_new_playlist"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getUrl" />



</androidx.constraintlayout.widget.ConstraintLayout>