<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetailsActivity">

    <Button
        android:id="@+id/buttonToHome"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/light_red"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/create_new_playlist"
        android:textSize="22sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <TextView
        android:id="@+id/newPlaylistNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_new_playlist_note"
        android:layout_marginTop="85dp"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="35dp"
        android:textSize="31sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="@+id/newPlaylistNote"
        app:layout_constraintStart_toStartOf="@+id/newPlaylistNote"
        app:layout_constraintTop_toBottomOf="@+id/newPlaylistNote" />

</androidx.constraintlayout.widget.ConstraintLayout>