<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayingSongActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/songPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"/>

    <ImageView
        android:id="@+id/songPicture"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="65dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        app:srcCompat="@drawable/empty_playlist" />

    <TextView
        android:id="@+id/songsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="@+id/songPicture"
        app:layout_constraintStart_toStartOf="@+id/songPicture"
        app:layout_constraintTop_toBottomOf="@+id/songPicture" />

    <TextView
        android:id="@+id/songsArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/song_artist"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/songsName"
        app:layout_constraintStart_toStartOf="@+id/songsName"
        app:layout_constraintTop_toBottomOf="@+id/songsName" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/button"
        android:visibility="invisible"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songsArtist" />

    <ImageButton
        android:id="@+id/prevButton"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_baseline_fast_rewind_24"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_baseline_fast_forward_24"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton" />

    <SeekBar
        android:id="@+id/volumeBar"
        android:layout_width="310dp"
        android:layout_height="20dp"
        android:max="255"
        android:progressTint="@color/dark_red"
        android:thumbTint="@color/light_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <ImageButton
        android:id="@+id/volumeIcon"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_baseline_volume_up_24"
        app:layout_constraintBottom_toBottomOf="@+id/volumeBar"
        app:layout_constraintEnd_toStartOf="@+id/volumeBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/volumeBar" />
</androidx.constraintlayout.widget.ConstraintLayout>